feat: bound financial query workloads